Create new query

--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,18 @@ html {
 
 main {
   color: #fff;
-  background-color: #495562
+  background-color: #495562;
 }
 
 .btn {
   color: #fff;
   border: 3px solid #97a49b;
+}
+
+.btn:hover {
+  color: #efefef;
+  background-color: #fff;
+  border: 3px solid #fff;
 }
 
 h1 {
@@ -20,11 +26,47 @@ p {
   margin: 0;
 }
 
+@media only screen and (min-width: 60em) {
 
-@media only screen and (min-width: 38em) {
+  main {
+    background-color: transparent;
+    max-height: 500px;
+  }
+
+  .bg-transition {
+    position: relative;
+    padding-top: 1em;
+    background-image: linear-gradient(to bottom, transparent, rgba(73, 85, 98, .5));
+  }
+
+  .content {
+    position: relative;
+    padding-top: 16.2em;
+  }
 
   .btn {
-    float: right;
+    border: 3px #fff solid;
+  }
+
+  .button {
+    text-align: right;
+  }
+
+  img {
+    overflow: hidden;
+    position: absolute;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  .bg-transition {
+    background-image: linear-gradient(to bottom, transparent, transparent, rgba(73, 85, 98, .8));
+  }
+
+  .content {
+    padding-top: 14em;
   }
 
 }
